Remove unnecessary plugins in subprojects